ingress/service.yml
kind: Service
apiVersion: v1
metadata:
    name: ingress-nginx
    labels:
       app.kubernetes.io/name: ingress-nginx
spec:
   type: NodePort
   selector:
      app.kubernetes.io/name: ingress-nginx
   ports:
     - name: http
       port: 80
       targetPort: http
     - name: https
       port: 443
       targetPort: http
