ingress/ingress_test.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: dev-ingress
   annotations:
     kubernetes.io/ingress.class: "nginx"
spec:
   tls:
   - hosts:
       - 157.245.107.84
   rules: 
     - http:
         paths:
         - backend: 
              serviceName: api-org
              servicePort: 9000
           path: /api/org
         - backend: 
              serviceName: api-sys
              servicePort: 9000
           path: /api/sys
         - backend: 
              serviceName: api-uma
              servicePort: 9000
           path: /api/uma
         - backend:
              serviceName: api-dms
              servicePort: 9000
           path: /api/dms
         - backend:
              serviceName: api-profiles
              servicePort: 9000
           path: /api/profiles
         - backend: 
              serviceName: ui
              servicePort: 80
           path: /
